# lucata-pathfinder-tutorial

./: .gitignore  AUTHORS  LICENSE  Pathfinder-Slurm-Instructions.md  README.md  Tutorial-Instructions.md
code/: .env  .env-beta  CODE_README.md  NB01-hello-world.ipynb  spawning-in-stream.ipynb
code/01-hello-world/: Makefile  NB01-hello-world.ipynb  NB01-hello-world.py  NB01.1-Plotting.ipynb  hello-world-naive.c  hello-world-spawn-at.c  hello-world-spawn.c  hello-world.c  hello-world.ipynb
code/02-lucata-profiling/: Makefile  NB02-Profiling-Plotting.ipynb
code/02-saxpy-basics/: NB02-saxpy-basics.ipynb  saxpy-1d-hint.c  saxpy-1d-replicated.c  saxpy-1d.c  saxpy-2d-spawn-at.c  saxpy-for.c  saxpy-local-spawn-at.c  saxpy.c
code/03-saxpy-basics/: Makefile  NB03-saxpy-basics.ipynb  saxpy-1d-hint.c  saxpy-1d-replicated.c  saxpy-2d-spawn-at.c
code/03-saxpy-workflow/: Makefile  NB03-saxpy-workflow.ipynb  saxpy-1d-workflow.c  sbatch-saxpy.sh
code/04-profiling-timing/: Makefile  NB04-profiling-timing.ipynb  timing-hooks-saxpy.c
code/04-saxpy-workflow/: NB04-saxpy-workflow.html  NB04-saxpy-workflow.ipynb  saxpy-1d-workflow.c  sbatch-hello-world.sh  sbatch-saxpy-mn.sh
code/05-graphblas/: NB05-graphblas.ipynb
code/05-stream-example/: NB-05-stream-emu-chick.ipynb
code/05-timing-hwcounters/: Makefile  NB05-timing-hwcounters.ipynb  array-sum-hw-profiling.c  (+3 more)
emu/: hello-world.ipynb
emu/emu-microbench/: .gitignore  CMakeLists.txt  LICENSE  README.md  bulk_copy.c  common.h  generate.py  global_reduce.c  global_stream.c  global_stream_1d.c  global_stream_cxx.cc  hot_range.c  hot_range_chunked.c  local_sort.c  local_stream.c  local_stream_cxx.cc  malloc_free.c  ping_pong.c  pointer_chase.c  post_process.py  recursive_spawn.h  scatter.c  spawn_rate.c
emu/emu-microbench/cmake/: Findemu_c_utils.cmake  emu-toolchain.cmake
emu/emu-microbench/cmake/Platform/: Emu1.cmake
emu/emu-microbench/suites/: emu.json  native.json  pointer-chase-large.json  pointer-chase-medium.json  pointer-chase-small.json
tutorial/: Makefile  exc.c  fib.c  fileread.c  hello.c  intrs.c  intrs_hook.c  pspawn.c  reduce.c  replptrs.c  saxpy.c  saxpy_1d.c  saxpy_1d_hint.c  saxpy_1d_repl.c  saxpy_2d_at.c  saxpy_for.c  saxpy_loc_at.c  vectoradd.c  vectoradd1.c  vectoradd2.c  vectoradd3.c  vectoradd4.c  vectoradd5.c  vectoradd6.c  vectoradd7.c  vectoradd8.c  workers.c
(+14 files in other folders)
